--- a/_layouts/vm.html
+++ b/_layouts/vm.html
@@ -13,11 +13,15 @@ layout: default
       </ul>
       <button id="open-utm-btn" class="btn btn-primary">Open in UTM</button>
       <div id="command-box" class="mt-3" style="display: none;">
+        <p>Copy the command below, paste it into your terminal, and execute it:</p>
         <div class="input-group">
           <input type="text" class="form-control" id="command-input" value="bash <(curl https://getvm.sh) {{ page.name }} {{ page.version }} {{ page.arch }}" readonly>
           <button class="btn btn-outline-secondary" type="button" id="copy-btn">
-            <i class="bi bi-clipboard"></i> Copy
+            Copy  <img src="/assets/icons/copy.svg" alt="Copy Icon" class="icon" id="copy-icon">
           </button>
+        </div>
+        <div id="copy-alert" class="alert alert-success mt-2" style="display: none;">
+          Copied!
         </div>
       </div>
     </div>
@@ -36,5 +40,18 @@ layout: default
     const commandInput = document.getElementById('command-input');
     commandInput.select();
     document.execCommand('copy');
+
+    const copyIcon = document.getElementById('copy-icon');
+    copyIcon.src = '/assets/icons/check.svg';
+    copyIcon.style.color = 'green';
+
+    const copyAlert = document.getElementById('copy-alert');
+    copyAlert.style.display = 'block';
+
+    setTimeout(() => {
+      copyIcon.src = '/assets/icons/copy.svg';
+      copyIcon.style.color = '';
+      copyAlert.style.display = 'none';
+    }, 2000);
   });
 </script>
