--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,9 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{ '/' | relative_url }}">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{ '/about' | relative_url }}">About</a>
+        </li>
         <!-- Add more nav items as needed -->
       </ul>
     </div>
