--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,9 @@
           <a class="nav-link active" aria-current="page" href="{{ '/' | relative_url }}">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{ '/how_to_use' | relative_url }}">How to use</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{{ '/about' | relative_url }}">About</a>
         </li>
         <!-- Add more nav items as needed -->
