not ready for version specific downloads

--- a/_layouts/vm.html
+++ b/_layouts/vm.html
@@ -56,7 +56,7 @@ layout: default
       <div id="command-box" class="mt-3" style="display: none;">
         <p>Copy the command below, paste it into your terminal, and execute it:</p>
         <div class="input-group">
-          <input type="text" class="form-control" id="command-input" value="curl -sSf https://naveenrajm7.github.io/utm-gallery/getbox.sh | sh -s {{ page.name }} {{ page.version }} {{ page.arch }}" wrap="off" style="overflow:auto">
+          <input type="text" class="form-control" id="command-input" value="curl -sSf https://naveenrajm7.github.io/utm-gallery/getbox.sh | sh -s {{ page.name }} " wrap="off" style="overflow:auto">
           <button class="btn btn-outline-secondary" type="button" id="copy-btn">
             Copy  <img src="{{ '/assets/icons/copy.svg' | relative_url }}" alt="Copy Icon" class="icon" id="copy-icon">
           </button>
