add how it works page with conventions about images change all html to md and use layout for styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,10 @@
 </head>
 <body>
   {% include header.html %}
-  <main>
-    {{ content }}
+  <main class="container my-4">
+    <div>
+      {{ content }}
+    </div>
   </main>
 
   <!-- Footer -->
